<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.songsparrow.notesharing.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_me"
        android:name="com.songsparrow.notesharing.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />

    <fragment android:id="@+id/nav_news"
        android:name="com.songsparrow.notesharing.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news"/>
</navigation>