<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.NoteFragment"
    android:id="@+id/fragment_note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fixed_margin"
        android:layout_marginEnd="@dimen/fixed_margin"
        android:background="@android:color/darker_gray"
        android:orientation="vertical">
        <!--upload-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_upload_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_upload"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
        <!--my favorite-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_favorite_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_favorite"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
        <!--my like-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_like_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_like"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
        <!--My Report-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_report_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_report"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
        <!--my appeal-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_appeal_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_appeal"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
        <!--my comments-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:layout_marginBottom="@dimen/fixed_line_wth"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_comments_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/my_comment"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_mid" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/go"
                android:src="@drawable/ic_go_black_24dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>